--- a/Android/app/src/main/res/layout/zone_entry.xml
+++ b/Android/app/src/main/res/layout/zone_entry.xml
@@ -7,6 +7,100 @@
     android:paddingTop="20dp" >
 
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="#f0f0f0"
+        app:cardMaxElevation="0dp"
+        app:cardPreventCornerOverlap="true"
+        app:contentPadding="15dp"
+        android:id="@+id/cardView"
+
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:id="@+id/zoneName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+
+                    android:text="Front Door"
+                    android:textColor="@color/black"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/muteZoneSwitch"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="Mute Zone"
+                    android:textColor="@color/black"
+                    app:theme="@style/SwitchCompatStyle"
+
+                    />
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/actionButton"
+                android:layout_width="0dp"
+                android:layout_weight="0.2"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Open"
+                android:textSize="11dp"
+                android:visibility="gone"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginEnd="10dp">
+                <TextView
+                    android:id="@+id/zoneState"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:text="TextView"
+                    android:textSize="24dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+</FrameLayout>
+
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingHorizontal="20dp"
+    android:paddingTop="20dp" >
+
+
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -77,3 +171,5 @@
 
 </androidx.cardview.widget.CardView>
 </FrameLayout>
+
+-->
