--- a/Android/app/src/main/res/layout/zone_entry.xml
+++ b/Android/app/src/main/res/layout/zone_entry.xml
@@ -74,16 +74,28 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_marginEnd="10dp">
+
                 <TextView
                     android:id="@+id/zoneState"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_vertical|right"
-                    android:text="TextView"
-                    android:textSize="24dp"
+                    android:text="State"
                     android:textColor="@color/black"
-                    android:textStyle="bold"/>
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/timeStamp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:text="Time Stamp"
+                    android:textColor="@color/black"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
