--- a/Android/app/src/main/res/values-night/themes.xml
+++ b/Android/app/src/main/res/values-night/themes.xml
@@ -15,6 +15,8 @@
 
         <item name="android:colorControlHighlight">#00000000</item>
 
+        <item name="android:textColor">@color/white</item>
+
         <!-- Customize your theme here. -->
     </style>
 </resources>
