--- a/Android/app/src/main/res/values/themes.xml
+++ b/Android/app/src/main/res/values/themes.xml
@@ -15,12 +15,17 @@
         <item name="android:windowLightStatusBar">true</item>
 
         <item name="android:navigationBarColor">@color/white</item>
+
+        <item name="android:textColor">@color/black</item>
+
     </style>
 
     <style name="Theme.AlarmSystem.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+
 
     <style name="Theme.AlarmSystem.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
