--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -5,10 +5,13 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="pitch_black">#000000</color>
     <color name="black">#131313</color>
     <color name="black800">#242424</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white300">#fafafa</color>
+
+    <color name="disconnectedOverlayGrey">#b9292929</color> <!--50% transparent gray -->
 
     <color name="vibrantRed">#ff1507</color>
 
