--- a/Android/app/src/main/res/layout/fragment_home.xml
+++ b/Android/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:overScrollMode="always"
             tools:ignore="DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck">
 
 
