--- a/Android/app/src/main/res/values-night/themes.xml
+++ b/Android/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,7 @@
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!--<item name="android:statusBarColor">@color/vibrantRed</item>-->
         <item name="android:navigationBarColor">@color/black</item>
 
         <item name="android:colorControlHighlight">#00000000</item>
