--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="disconnectedOverlayGrey">#b9292929</color> <!--50% transparent gray -->
 
     <color name="vibrantRed">#ff1507</color>
+    <color name="disarmedColor">#00fc00</color>
 
 
     <color name="OfflineGrey">#ffdddd</color>
