--- a/Android/app/src/main/res/layout/app_bar_main.xml
+++ b/Android/app/src/main/res/layout/app_bar_main.xml
@@ -17,6 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimaryVariant"
             android:elevation="0dp"
+            android:visibility="visible"
             app:popupTheme="@style/Theme.AlarmSystem.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
