--- a/Android/app/src/main/res/layout/fragment_home.xml
+++ b/Android/app/src/main/res/layout/fragment_home.xml
@@ -7,70 +7,36 @@
     tools:context=".ui.home.HomeFragment">
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="667dp"
-        android:text="@string/sendmessage"
-        app:layout_constraintStart_toStartOf="parent"
+    <ToggleButton
+        android:id="@+id/arm_button"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/arm_button"
+        android:textOff="Disarmed"
+        android:textOn="Armed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.807" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
 
-        android:visibility="invisible"
-        />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/colorPrimary"
-            android:divider="@null"
-            android:dividerHeight="0.0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:overScrollMode="always"
-            tools:ignore="DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck">
-
-
-        </ListView>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/disconnectedOverlay"
-            android:background="@color/disconnectedOverlayGrey"
-            android:visibility="visible"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
-
-            <TextView
-                android:id="@+id/textView3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="4dp"
-                android:textSize="20dp"
-                android:text="Connecting to server..."
-                android:background="@color/connectingBackgroundColor"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </FrameLayout>
-
-
-
-
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
+        android:text="DISARMED"
+        android:textColor="@color/disarmedColor"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.194"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
 </androidx.constraintlayout.widget.ConstraintLayout>
