--- a/Android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Android/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
+
+    <fragment
+        android:id="@+id/nav_zones"
+        android:name="com.johnathanmitri.alarmsystem.ui.zones.ZonesFragment"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_zones" />
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.johnathanmitri.alarmsystem.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.johnathanmitri.alarmsystem.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_slideshow"
