--- a/Android/app/src/main/res/values-night/themes.xml
+++ b/Android/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,8 @@
 
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!--<item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
+        <item name="android:statusBarColor">@color/black</item>
         <!--<item name="android:statusBarColor">@color/vibrantRed</item>-->
         <item name="android:navigationBarColor">@color/black</item>
 
